2003-04-19   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/Apache/mod_gsweb.c:
		o added debug logs
	* GSWAdaptors/common/GSWConfig.c:
		o added debug logs, removed duplicate 
			pszParent string build
	* GSWAdaptors/common/GSWHTTPRequest.c:
		o logs

2003-04-09   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/common/GSWUtils.c:
		o prefix logs with GSWeb[pid]
	* GSWAdaptors/common/GSWAppRequest.c:
		o improved logs
	* GSWApp.c/.h:
		o add instance handled request count and no response count
	* GSWConfig.c:
		o remove "GSWeb:" prefix in logs
		o initialize 
	* GSWApp.h:
		o renamed instance index
	* GSWLoadBalancing.c:
		o logs
	
2003-04-09   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWeb.framework/GSWSessionTimeOut.m:
		o fix in -description
	* GSWeb.framework/GSWApplication.m:
		o build currentRunLop before calling -run
		o log allFrameworks when a component is not found
	* GSWeb.framework/GSWHyperlink.m:
		o better handling of isSecure (regarding current request secure state)
	* GSWExtensions.framework/GSWSessionRestorationErrorPage.gswd:
		o use "" pageName so application may choose the main page
	* GSWExtensions.framework/GSWPageRestorationErrorPage.gswc/GSWPageRestorationErrorPage.gswd:
		o use "" pageName so application may choose the main page
	* GSWeb.framework/GSWConstants.m/.h:
		o added GSWHTTPHeader_Protocol, GSWHTTPHeader_ProtocolNum, 
			GSWHTTPHeader_RequestScheme
	* GSWeb.framework/GSWContext.m/.h:
		o fix in -_synchronizeForDistribution
		o try to avoid complete URL when we can use relative one
	* GSWeb.framework/GSWRequest.m:
		o fix to retrieve protocol & port from adaptor headers
	* GSWeb.framework/GSWSession.m:
		o fix in -appendCookieToResponse:
	* GSAdaptors/Apache/mod_gsweb.c:
		o fix for server port header
	
2003-04-05   Manuel Guesdon <mguesdon@orange-concept.com>
	* GSWAdaptors/common/config.h:
		o change minor version
	* GSWAdaptors/common/GSWUtil.h/.c:
		o added FormatAPRTime