@@ -1,3 +1,11 @@
+2003-05-14   Manuel Guesdon <mguesdon@orange-concept.com>
+	* GSWeb.framework/GSWResourceManager.m:
+		o added warning in ISOLanguagesFromGSLanguages
+		o asserts
+	* GSWeb.framework/GSWApplication.m:
+		o assert adaptor name length>0 in 
+		   -adaptorWithName:arguments: and in -_initAdaptorsWithUserDefaults:
+			
 2003-04-19   Manuel Guesdon <mguesdon@orange-concept.com>
 	* GSWAdaptors/Apache/mod_gsweb.c:
 		o added debug logs
